# oceantracker

./: .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  _todo.md  conda_devel_environment.yml  developer-requirements.txt  environment-dev.yml  environment.yml  generate_environment_yaml.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_deploy_documentation.yml  build_and_publish.yml  publish-to-testpypi.yml
colborators/bug_hunting/: hunt_bug.py  hunt_bug.py.lprof
colborators/tests/: FVCOM_Lake_Superior_test.json  FVCOM_Lake_Superior_test.yml  test_FVCOM_Lake_Superior.py  test_FVCOM_Lake_Superiorr.py  test_laurin.py
demo_param_files/: demo01_plot_tracks.json  demo01_plot_tracks.yaml  demo02_animation.json  demo06_reefstranding.json  demo08_particle_splitting.yaml  demo10_polygon_residence_demo.json  demo50_SCHISM_basic.json  demo56_SCHISM_3D_resupend_crtitical_frictn_vel.yaml  demo59_crit_shear_resupension.json  demo60_SCHISM_3D_decaying_particle.json  demo60_SCHISM_3D_decaying_particle.yaml  demo70_LCS_test.json  demo70_LCS_test.yaml  demo90forward.json
demos/: build_and_test_demos.py  build_demo_plots.py  make_demo_plots.py  make_demo_videos.sh  minimal_example.py  minmal_example.ipynb  run_demos.py  run_demos.py.lprof  run_from_code_demo.py  run_from_command_line_demo.py
demos/demo_code/: demo01_plot_tracks.py  demo02_animation.py  demo03_heatmaps.py  demo04_ageBasedHeatmaps.py  demo05_parallel.py  demo06_reefstranding.py  demo07_inside_polygon_events.py  demo08_particle_splitting.py  demo09_polygon_release_overlapping_land.py  demo10_polygon_residence.py  demo10_polygon_residence_demo.py  demo50_SCHISM_basic.py  demo50_SCHISM_depthAver.py  demo55_SCHISM_3D_fall_velocity.py  demo56_SCHISM_3D_always_resupend.py  demo56_SCHISM_3D_resupend_crtitical_friction_vel.py  demo57_SCHISM_3D_lateralBoundaryTest.py  demo58_bottomBounce.py  demo59_crit_shear_resupension.py  demo60_SCHISM_3D_decaying_particle.py  demo61_concentration_test.py  demo62_polygon_release_overlapping_land.py  demo70_LCS.py  demo70_LCS_test.py  demo70_ROMS_reader.py  demo70_ROMS_reader_test.py  demo90forward.py
demos/demo_hindcast/: demoHindcast2D1.nc  demoHindcast2D2.nc  demoHindcast2D3.nc  demoHindcastSchism3D.nc  make_demo_hindcast.py  make_demo_schism_hindcast.py  test.geojson
demos/demo_json/: demo01_plot_tracks.json  demo02_animation.json  demo03_heatmaps.json  demo04_ageBasedHeatmaps.json  demo05_parallel.json  demo06_reefstranding.json  demo07_inside_polygon_events.json  demo08_particle_splitting.json  demo09_polygon_release_overlapping_land.json  demo10_polygon_residence_demo.json  demo50_SCHISM_depthAver.json  demo55_SCHISM_3D_fall_velocity.json  demo56_SCHISM_3D_always_resupend.json  demo56_SCHISM_3D_resupend_crtitical_friction_vel.json  demo57_SCHISM_3D_lateralBoundaryTest.json  demo58_bottomBounce.json  demo59_crit_shear_resupension.json  demo60_SCHISM_3D_decaying_particle.json  demo61_concentration_test.json  demo70_ROMS_reader.json  demo70_ROMS_reader_test.json  demo90forward.json  minimal_example.json
demos/demo_param_files/: demo00_helper_class_test.json  demo00_helper_class_test.yaml  demo01_plot_tracks.json  demo01_plot_tracks.yaml  demo02_animation.json  demo02_animation.yaml  demo03_heatmaps.json  demo03_heatmaps.yaml  demo04_ageBasedHeatmaps.json  demo04_ageBasedHeatmaps.yaml  demo05_parallel.json  demo05_parallel.yaml  demo06_reefstranding.json  demo06_reefstranding.yaml  demo07_inside_polygon_events.json  demo07_inside_polygon_events.yaml  demo08_particle_splitting.json  demo08_particle_splitting.yaml  demo09_polygon_release_overlapping_land.json  demo09_polygon_release_overlapping_land.yaml  demo10_polygon_residence_demo.json  demo10_polygon_residence_demo.yaml  demo50_SCHISM_basic.json  demo50_SCHISM_basic.yaml  demo50_SCHISM_depthAver.json  demo50_SCHISM_depthAver.yaml  demo56_SCHISM_3D_resupend_crtitical_friction_vel.json  demo56_SCHISM_3D_resupend_crtitical_friction_vel.yaml  demo56_SCHISM_3D_resupend_crtitical_frictn_vel.json  (+24 more)
dev/: dev_template.py  show_grid_and_varaibles.py  show_grid_and_variables.py
docs/: .gitlab-ci.yml  Makefile  build_parameter_ref.py  conf.py  gatherDefaultParams.py  index.rst
installing/: build_conda_developer_env_steps.bat  build_conda_env_steps.bat  build_conda_env_steps.md  developer-conda-environment.yml  environment.yml  generate_environment_yaml.py  installing.md  linux_install.sh  oceantracker_linux_install.sh  ot_conda_env.yml
oceantracker/: __init__.py  _oceantracker_case_runner.py  _oceantracker_main_runner.py  common_info_default_param_dict_templates.py  definitions.py  depricated_common_info.py  main.py  oceantracker_case_runner.py  oceantracker_case_runner_v1.py  oceantracker_params_runner.py  run_oceantracker.py  run_ot_cmd_line.py  shared_info.py  shared_info_depricated.py
plot_oceantracker/: __init__.py  plot_statistics.py  plot_tracks.py  plot_utilities.py  plot_vertical_tracks.py  readme.md
profiling/: MemoryBandwidthsTotal.xlsx  notes.md  profileOT.ipynb  profileOT.py  profileOT.py.lprof  profile_params.json
read_oceantracker/: readme.md
tests/: build_test_hindcasts.py  build_unit_test_hindcasts.py  concurrency.sh  dev_runs_master.py  dev_test_master.py  oceantracker_linux_install.sh  run_unitests.py  test_base.py  test_parameter_checking.py  test_reader_formats.py  test_shared_memory.py  test_speed.py  unit_test_master.py
tutorials_how_to/: A_minimal_example.ipynb  A_minimal_example.py  B_running_with_helper_class.ipynb  B_running_with_helper_class.py  C_release_groups.ipynb  C_release_groups.py  C_using_parameters.ipynb  D_output_files.ipynb  D_output_files.py  E_run_using_parameter_dictionaries.ipynb  E_run_using_parameter_dictionaries.py  F_hydrodynamics_and_utilities.ipynb  F_plotting_tracks.ipynb  F_plotting_tracks.txt  G_onthefly_statistics.ipynb  G_onthefly_statistics.py  H_add_user_written_class.ipynb  P_running_cases_in_parallel.ipynb  P_running_cases_in_parallel.py  my_part_prop.py  parallel_demo.py
(+1778 files in other folders)
