[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceantracker"
version = "0.5.2.0"
description = "Fast offline Lagrangian particle tracking in the Ocean for structured and unstructured grids"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Ross Vennell", email = "ross.vennell@otago.ac.nz"},
    {name = "Laurin Steidle", email = "laurin.steidle@cawthron.org.nz"}
]
maintainers = [
    {name = "Laurin Steidle", email = "laurin.steidle@cawthron.org.nz"}
]
keywords = ["oceanography", "particle tracking", "lagrangian", "ocean modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "netcdf4",
    "xarray",
    "scipy",
    "pyproj",
    "psutil",
    "matplotlib",
    "pyyaml",
    "ffmpeg-python",
    "ipykernel",
    "requests",
]

[project.urls]
Homepage = "https://oceantracker.github.io/oceantracker/"
Documentation = "https://oceantracker.github.io/oceantracker/"
Repository = "https://github.com/oceantracker/oceantracker"
Issues = "https://github.com/oceantracker/oceantracker/issues"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    # "pytest>=7.0",
    # "pytest-cov",
    # "black",
    # "ruff",
    # "mypy",
    # "pre-commit",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-toolbox>=3.3.0",
    "sphinx-changelog",
    "myst-parser",
    "nbsphinx",
    "ipython",
    "beautifulsoup4",
    "autodocsumm",
    "rst2pdf",
]
# test = [
#     "pytest>=7.0",
#     "pytest-cov",
#     "pytest-xdist",
#     "pytest-datadir",
#     "pytest-regressions",
# ]
all = [
    "oceantracker[dev,docs,test]",
]

[project.scripts]
oceantracker = "oceantracker.run_ot_cmd_line:main"

[tool.setuptools]
packages = ["oceantracker"]

[tool.setuptools.package-data]
oceantracker = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]

[tool.setuptools.exclude-package-data]
# "*" = ["tests*", "dev*", "docs*", "__pycache__*", "*.pyc"]
"*" = ["__pycache__*", "*.pyc"]

# Sphinx configuration
[tool.sphinx]
project = "OceanTracker"
author = "R. Vennell, L. Steidle"
copyright = "2024, R. Vennell"
release = "Beta 0.5"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.intersphinx",
    "sphinx_autodoc_typehints",
    "sphinx_toolbox.collapse",
    "sphinx_changelog",
    "myst_parser",
    "nbsphinx",
    "autodocsumm",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
html_logo = "_static/ocean_tracker.png"
# intersphinx_mapping = {
#     "python": ("https://docs.python.org/3", None),
#     "numpy": ("https://numpy.org/doc/stable/", None),
#     "scipy": ("https://docs.scipy.org/doc/scipy/", None),
#     "matplotlib": ("https://matplotlib.org/stable/", None),
# }


# pytest configuration
# [tool.pytest.ini_options]
# minversion = "7.0"
# addopts = "-ra -q --strict-markers --strict-config"
# testpaths = [
#     "tests",
# ]
# python_files = [
#     "test_*.py",
#     "*_test.py",
# ]

# Coverage configuration
# [tool.coverage.run]
# source = ["oceantracker"]
# omit = [
#     "*/tests/*",
#     "*/dev/*",
#     "*/docs/*",
#     "*/__pycache__/*",
# ]

# [tool.coverage.report]
# exclude_lines = [
#     "pragma: no cover",
#     "def __repr__",
#     "if self.debug:",
#     "if settings.DEBUG",
#     "raise AssertionError",
#     "raise NotImplementedError",
#     "if 0:",
#     "if __name__ == .__main__.:",
# ]