[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceantracker"
version = "0.5.2.56"
description = "Fast offline Lagrangian particle tracking in the Ocean for structured and unstructured grids"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Ross Vennell", email = "ross.vennell@cawthron.org.nz"},
    {name = "Laurin Steidle", email = "laurin.steidle@cawthron.org.nz"}
]
maintainers = [
    {name = "Ross Vennell", email = "ross.vennell@cawthron.org.nz"},
    {name = "Laurin Steidle", email = "laurin.steidle@cawthron.org.nz"}
]
keywords = ["oceanography", "particle tracking", "lagrangian", "ocean modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Oceanography",
]
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "netcdf4",
    "xarray",
    "scipy",
    "pyproj",
    "psutil",
    "matplotlib",
    "pyyaml",
    "ffmpeg-python",
    "ipykernel",
    "requests",
]

[project.urls]
Homepage = "https://oceantracker.github.io/oceantracker/"
Documentation = "https://oceantracker.github.io/oceantracker/"
Repository = "https://github.com/oceantracker/oceantracker"
Issues = "https://github.com/oceantracker/oceantracker/issues"

[project.optional-dependencies]
dev = [
    # dev_ops
    "build",
    "twine",
    # docs
    "sphinx>=7.0",
    "sphinx-toolbox>=3.3.0",
    "nbsphinx",
    "ipython",
    "rst2pdf",
    # test
    "pytest>=7.0",
    "pytest-xdist",
    "coverage",
    "pytest-cov",
    "jupyter",
    "nbclient",
    "ffmpeg",
]

[project.scripts]
oceantracker = "oceantracker.run_ot_cmd_line:main"

[tool.setuptools]
packages = ["oceantracker"]

[tool.setuptools.package-data]
oceantracker = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]

[tool.setuptools.exclude-package-data]
# "*" = ["tests*", "dev*", "docs*", "__pycache__*", "*.pyc"]
"*" = ["__pycache__*", "*.pyc"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n logical"
testpaths = [
    "tests/unit_tests",
]
python_files = [
    "test*.py",
]